# quant_trading

./: .gitignore  AGENTS.md  skills-lock.json  start.sh  track_quant.db
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: ai_logic_api.py  analysis_api.py  backtest_api.py  daily_report_api.py  dashboard_api.py  ml_api.py  monitor_api.py  recommendation_api.py  strategy_api.py  track.py  unsupervised_api.py
backend/app/db/: database.py
backend/app/features/: features_generic.py  features_track.py
backend/app/ml/: __init__.py  model_trainer.py  scorer.py
backend/app/ml/models/: ai.pkl  ai_meta.json  robot.pkl  semiconductor.pkl  storage.pkl  (+2 more)
backend/app/models/: __init__.py  track.py
backend/app/schemas/: track.py
backend/app/services/: report_generator.py  track_service.py
backend/backtest/: __init__.py  engine.py  report.py
backend/configs/: ai_config.json  factor_whitelist.json  sector_leaders.json
backend/ml/backtest/: backtest_report.json  equity_curve.csv  equity_curve_周频+止损.csv  equity_curve_周频.csv  equity_curve_月频+止损.csv  equity_curve_月频.csv
backend/ml/models/: ai-power.pkl  ai-power_meta.json  ai.pkl  ai_meta.json  material.pkl  material_meta.json  robot.pkl  robot_meta.json  semiconductor.pkl  semiconductor_meta.json  storage.pkl  storage_meta.json
backend/ml/preprocessed/: feature_cols.json  meta.json  scaler_params.json
backend/scripts/: compute_features.py  fill_feature_descriptions.py  preprocess_features.py  run_backtest.py  run_unsupervised.py  screen_factors.py  train_models.py  verify_pipeline.py
backend/strategies/: __init__.py  ai_scoring.py  bollinger_squeeze.py  composite.py  equal_weight.py  kdj.py  macd.py  mean_reversion.py  momentum.py  signal_base.py  trend.py  triple_ma.py  turtle.py  volume_breakout.py
(+299 files in other folders)
