[project]
name = "track-quant"
version = "1.0.0"
description = "赛道型量化系统"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.11.0",
    "alphalens-reloaded>=0.4.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "pyarrow>=14.0.0",
    "joblib>=1.3.0",
    "greenlet>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "ml*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
